trunk/Archive2/1a/1da2747679a55d/output
main.cpp:7:11: error: array type 'int [3]' is not assignable
    array = pointer ;
    ~~~~~ ^
1 error generated.
